name:                adventofcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Taylor1791/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Taylor Everding
maintainer:          Taylor@Everding.email
copyright:           Copyright: (c) 2015 Taylor Everding
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit
                     , parsec
                     , containers
                     , mtl
                     , bytestring
                     , cryptohash
                     , regexpr
                     , array
                     , aeson
                     , vector
                     , unordered-containers
                     , scientific
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , array
                     , containers
                     , adventofcode
                     , tasty
                     , tasty-hunit
                     , aeson
                     , bytestring
                     , scientific
  other-modules:       Test.Day1
                     , Test.Day2
                     , Test.Day3
                     , Test.Day4
                     , Test.Day5
                     , Test.Day6
                     , Test.Day7
                     , Test.Day8
                     , Test.Day9
                     , Test.Day10
                     , Test.Day11
                     , Test.Day12
                     , Test.Day13
                     , Test.Day14
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Taylor1791/adventofcode
